@@ -1,5 +1,10 @@
 2000-11-02   Daiki Ueno  <ueno@unixuser.org>
 
+	* smtp.el (smtp-via-smtp): Mark as obsolete.
+	(smtp-send-buffer): Rename from `smtp-via-smtp'.
+
+2000-11-02   Daiki Ueno  <ueno@unixuser.org>
+
 	* sasl.el (sasl-make-authenticator): Allocate a freshly generated
 	symbol for each continuation.
 
